# sequence_concatenator

./: Dockerfile  README.md  cli.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  replace-readme-placeholders.yml
core/: partition_generator.py  sequence_merger.py
data/: input1.fasta  input2.nex  input2.nex.fasta  input2.nex.nex  input2.nex_partition.txt  input3.gbff
export/: partition_writer.py
input/: genbank_reader.py
output/: out1.fasta  out1.nex  out2.fasta  out2_partition.txt  output.fasta  output.nex  output_partition.txt
readers/: fasta_reader.py  genbank_reader.py  nexus_reader.py
sequence_concatenator/core/: sequence_merger.py  stats.py
sequence_concatenator/ui/: gui.py  viewer.py
sequence_concatenator/utils/: file_utils.py
sequence_concatenator/writers/: nexus_writer.py  report_writer.py
tests/: test_fasta_writer.py  test_file_utils.py  test_nexus_writer.py  test_partition_generator.py  test_partition_writer.py  test_readers.py  test_sequence_merger.py  test_sequence_utils.py  test_stats.py
tests/test_data/: output_partition.txt  output_test.fasta  output_test.nex
ui/: gui.py  viewer.py
utils/: sequence_utils.py
writers/: fasta_writer.py
