[project]
name = "sequence_concatenator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
     "biopython",
     "pytest",
     "tk" 
]

[tool.setuptools.packages.find]
packages = ["sequence_concatenator"]

[project.scripts]
sequencecat = "cli:main"  # CLI entry point

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
